--- a/app/src/main/res/layout/fragment_pantalla_de_registro.xml
+++ b/app/src/main/res/layout/fragment_pantalla_de_registro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PantallaDeInicio">
+    tools:context=".PantallaDeRegistro">
 
     <!-- TODO: Update blank fragment layout -->
     <!--Panel azul-->
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Iniciar sesión"
+        android:text="Registrarse"
         android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -44,12 +44,12 @@
         app:layout_constraintStart_toStartOf="@+id/panel"
         app:layout_constraintTop_toTopOf="@+id/panel"/>
     <TextView
-        android:id="@+id/correotitl"
+        android:id="@+id/nombretitl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
-        android:text="Correo electronico"
+        android:text="Nombre de usuario"
         android:textColor="#000000"
         android:textSize="20sp"
         android:layout_marginLeft="100px"
@@ -57,6 +57,31 @@
         app:layout_constraintTop_toTopOf="@+id/titulo"
         />
 
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/panel"
+        app:layout_constraintStart_toStartOf="@+id/panel"
+        app:layout_constraintTop_toTopOf="@+id/nombretitl"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:maxLines="1"
+        android:inputType="text"/>
+    <TextView
+        android:id="@+id/correotitl"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:gravity="center"
+        android:text="Correo Electrocino"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:layout_marginLeft="100px"
+        app:layout_constraintStart_toStartOf="@+id/panel"
+        app:layout_constraintTop_toTopOf="@+id/nombretitl"
+        />
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -73,7 +98,7 @@
         android:id="@+id/contrasena"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:gravity="center"
         android:text="Contraseña"
         android:textColor="#000000"
@@ -95,30 +120,30 @@
         android:maxLines="1"
         android:inputType="text"/>
     <TextView
-        android:id="@+id/olvidar"
+        android:id="@+id/repetircontrasena"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:gravity="center"
-        android:text="¿Olvido su contaseña?"
+        android:text="Repetir Contraseña"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:layout_marginLeft="100px"
+        app:layout_constraintStart_toStartOf="@+id/panel"
+        app:layout_constraintTop_toTopOf="@+id/contrasena"
+        />
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/panel"
         app:layout_constraintStart_toStartOf="@+id/panel"
-        app:layout_constraintTop_toTopOf="@+id/contrasena"/>
-
-    <Button
-        android:id="@+id/btniniciar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Iniciar sesión"
-        android:background="#114B8D"
-        android:textColor="#FFFFFF"
-        app:layout_constraintTop_toTopOf="@+id/olvidar"
-        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toTopOf="@+id/repetircontrasena"
+        android:layout_marginTop="30dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"/>
+        android:layout_marginBottom="32dp"
+        android:maxLines="1"
+        android:inputType="text"/>
     <Button
         android:id="@+id/btnregistrar"
         android:layout_width="match_parent"
@@ -126,7 +151,31 @@
         android:text="Registrarme"
         android:background="#114B8D"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toTopOf="@+id/btniniciar"
+        app:layout_constraintTop_toTopOf="@+id/repetircontrasena"
+        android:layout_marginTop="80dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"/>
+    <Button
+        android:id="@+id/btngoogle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Continuar con Google"
+        android:background="#114B8D"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toTopOf="@+id/btnregistrar"
+        android:layout_marginTop="80dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"/>
+    <Button
+        android:id="@+id/btniniciar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Iniciar sesion"
+        android:background="#114B8D"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toTopOf="@+id/btngoogle"
         android:layout_marginTop="60dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
