desabilitar/habilitar botones y añadir dialog a restablecer contraseña

--- a/app/src/main/res/layout/fragment_pantalla_de_inicio.xml
+++ b/app/src/main/res/layout/fragment_pantalla_de_inicio.xml
@@ -101,8 +101,9 @@
         android:layout_marginTop="80dp"
         android:gravity="center"
         android:text="¿Olvido su contaseña?"
+        android:elevation="0dp"
         android:textColor="#000000"
-        android:background="#FFFFFF"
+        android:background="@color/transparent"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/panel"
         app:layout_constraintStart_toStartOf="@+id/panel"
