--- a/app/src/main/res/layout/fragment_restablecer_password1.xml
+++ b/app/src/main/res/layout/fragment_restablecer_password1.xml
@@ -90,9 +90,9 @@
         android:id="@+id/btnEnviar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#114B8D"
+        android:background="#416FA4"
         android:text="Enviar código"
-        android:enabled="true"
+        android:enabled="false"
         android:textColor="#FFFFFF"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
