--- a/app/src/main/res/layout/fragment_restablecer_password2.xml
+++ b/app/src/main/res/layout/fragment_restablecer_password2.xml
@@ -57,10 +57,12 @@
         app:layout_constraintTop_toTopOf="@+id/titulo" />
 
     <EditText
-        android:id="@+id/eTCorreoE"
+        android:id="@+id/TextCodigo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:autofillHints="123456"
+        android:hint="123456"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="32dp"
         android:inputType="text"
@@ -82,7 +84,7 @@
         android:layout_marginTop="56dp"
         tools:layout_editor_absoluteX="32dp"
         tools:layout_editor_absoluteY="632dp"
-        app:layout_constraintTop_toBottomOf="@+id/eTCorreoE"/>
+        app:layout_constraintTop_toBottomOf="@+id/TextCodigo"/>
 
     <Button
         android:id="@+id/btnRestContra"
@@ -91,7 +93,8 @@
         android:layout_marginTop="200dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:background="#114B8D"
+        android:background="#416FA4"
+        android:enabled="false"
         android:text="Restablecer contraseña"
         android:textColor="#FFFFFF"
         app:layout_constraintTop_toBottomOf="@+id/btnEnviarCod"
