--- a/app/src/main/res/layout/fragment_restablecer_password3.xml
+++ b/app/src/main/res/layout/fragment_restablecer_password3.xml
@@ -106,9 +106,10 @@
         android:id="@+id/btnRestablecer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#114B8D"
+        android:background="#416FA4"
         android:text="Establecer"
         android:textColor="#FFFFFF"
+        android:enabled="false"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginTop="150dp"
