--- a/app/src/main/res/layout/fragment_restablecer_password2.xml
+++ b/app/src/main/res/layout/fragment_restablecer_password2.xml
@@ -27,12 +27,24 @@
         app:layout_constraintHeight_percent="0.9"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/btnCancelar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="@color/transparent"
+        android:text="Cancelar"
+        android:textColor="#E51F1F"
+        app:layout_constraintEnd_toEndOf="@+id/panel"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="@+id/panel"
+        tools:layout_editor_absoluteX="307dp" />
 
     <TextView
         android:id="@+id/titulo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="52dp"
         android:gravity="center"
         android:text="Recuperar contraseña"
         android:textColor="#000000"
