--- a/app/src/main/res/layout/fragment_pantalla_de_inicio.xml
+++ b/app/src/main/res/layout/fragment_pantalla_de_inicio.xml
@@ -26,10 +26,12 @@
         android:id="@+id/panel"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintHeight_percent="0.9"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/titulo"
         android:layout_width="0dp"
@@ -58,6 +60,7 @@
         />
 
     <EditText
+        android:id="@+id/etEmailAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/panel"
@@ -83,6 +86,7 @@
         app:layout_constraintTop_toTopOf="@+id/correotitl"
         />
     <EditText
+        android:id="@+id/etPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/panel"
@@ -93,7 +97,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:maxLines="1"
-        android:inputType="text"/>
+        android:inputType="textPassword"/>
     <Button
         android:id="@+id/olvidar"
         android:layout_width="wrap_content"
