--- a/app/src/main/res/layout/fragment_pantalla_de_registro.xml
+++ b/app/src/main/res/layout/fragment_pantalla_de_registro.xml
@@ -58,6 +58,7 @@
         />
 
     <EditText
+        android:id="@+id/setName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/panel"
@@ -83,6 +84,7 @@
         app:layout_constraintTop_toTopOf="@+id/nombretitl"
         />
     <EditText
+        android:id = "@+id/setEmailAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/panel"
@@ -93,7 +95,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:maxLines="1"
-        android:inputType="text"/>
+        android:inputType="textEmailAddress"/>
     <TextView
         android:id="@+id/contrasena"
         android:layout_width="0dp"
@@ -108,6 +110,7 @@
         app:layout_constraintTop_toTopOf="@+id/correotitl"
         />
     <EditText
+        android:id="@+id/setPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/panel"
@@ -118,7 +121,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:maxLines="1"
-        android:inputType="text"/>
+        android:inputType="textPassword"/>
     <TextView
         android:id="@+id/repetircontrasena"
         android:layout_width="0dp"
@@ -133,6 +136,7 @@
         app:layout_constraintTop_toTopOf="@+id/contrasena"
         />
     <EditText
+        android:id="@+id/setConfPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/panel"
@@ -143,7 +147,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:maxLines="1"
-        android:inputType="text"/>
+        android:inputType="textPassword"/>
     <Button
         android:id="@+id/btnregistrar"
         android:layout_width="match_parent"
@@ -180,4 +184,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
