pequeñas modificaciones en el editar perfil

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <!--Custom Colors-->
     <color name="custom_color_primary">#114B8D</color>
     <color name="red">#BB374F</color>
+    <color name="colorSelected">#88A5C6</color>
+    <color name="colorUnselected">#FFFFFF</color>
 </resources>
