--- a/app/src/main/res/layout/fragment_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_editar_perfil.xml
@@ -9,22 +9,25 @@
         android:id="@+id/flecha_atras"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         android:src="@drawable/unindent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="16dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/titulo_editar_perfil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="20dp"
         android:text="@string/editar_perfil_titulo"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textSize="25dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="20dp" />
+        app:layout_constraintStart_toEndOf="@+id/flecha_atras"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/linea_titulo"
@@ -32,11 +35,11 @@
         android:layout_height="1dp"
         android:layout_below="@id/titulo_editar_perfil"
         android:layout_gravity="top"
+        android:layout_marginTop="20dp"
         android:scaleType="fitXY"
         android:src="@drawable/line_2"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="75dp" />
-
+        app:layout_constraintTop_toBottomOf="@+id/titulo_editar_perfil"
+        tools:layout_editor_absoluteX="0dp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -45,8 +48,9 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         app:cardCornerRadius="250dp"
-        app:layout_constraintTop_toTopOf="@+id/linea_titulo"
-        tools:layout_editor_absoluteX="145dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linea_titulo">
 
         <ImageView
             android:layout_width="120dp"
@@ -59,61 +63,73 @@
     <Button
         android:id="@+id/buttonEditProfile"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_gravity="top"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/buttom_border"
         android:padding="8dp"
         android:text="@string/editar_foto"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
-        tools:layout_editor_absoluteX="154dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <TextView
         android:id="@+id/visibilidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
         android:text="Visibilidad"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="313dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEditProfile" />
 
     <Button
         android:id="@+id/publicVisibility"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_gravity="top"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/buttom_border"
+        android:backgroundTint="@color/colorSelected"
         android:padding="8dp"
         android:text="Público"
         app:layout_constraintEnd_toStartOf="@+id/privateVisibility"
-        tools:layout_editor_absoluteY="355dp" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/visibilidad" />
 
     <Button
         android:id="@+id/privateVisibility"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_gravity="top"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="192dp"
         android:background="@drawable/buttom_border"
+        android:backgroundTint="@color/colorUnselected"
         android:padding="8dp"
         android:text="Privado"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="355dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/visibilidad" />
 
     <TextView
         android:id="@+id/changeUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:text="Cambiar nombre de usuario"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="417dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/publicVisibility" />
 
     <EditText
         android:id="@+id/editTextUserName"
@@ -123,20 +139,21 @@
         android:layout_margin="20dp"
         android:inputType="textPassword"
         android:padding="12dp"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="451dp" />
+        app:layout_constraintTop_toBottomOf="@+id/changeUserName"
+        tools:layout_editor_absoluteX="20dp" />
 
     <TextView
         android:id="@+id/changeDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top"
+        android:layout_marginStart="24dp"
         android:text="Cambiar descripción"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="530dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />
 
     <EditText
         android:id="@+id/editTextDescription"
@@ -146,32 +163,37 @@
         android:layout_margin="20dp"
         android:inputType="textPassword"
         android:padding="12dp"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="565dp" />
+        app:layout_constraintTop_toBottomOf="@+id/changeDescription"
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
         android:id="@+id/buttonChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/buttom_border"
         android:padding="15dp"
-        android:textSize="18dp"
         android:text="Cambiar contraseña"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="637dp" />
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
 
     <Button
         android:id="@+id/Guardar_cambios"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@drawable/button_border"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/buttom_border"
         android:drawableLeft="@drawable/check_circle"
         android:drawablePadding="12dp"
-        android:text="Cambiar contraseña"
+        android:padding="8dp"
+        android:text="Guardar cambios"
         android:textSize="18dp"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="746dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
