--- a/app/src/main/res/layout/fragment_pantalla_perfil.xml
+++ b/app/src/main/res/layout/fragment_pantalla_perfil.xml
@@ -11,6 +11,7 @@
     <!--Titulo-->
     <!--app:layout_constraintTop_toTopOf="parent"-->
 
+
     <View
         android:id="@+id/foto"
         android:layout_width="0dp"
@@ -21,6 +22,18 @@
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/menuButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/vector"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+    />
+
 
     <View
         android:text="Some text"
