--- a/app/src/main/res/menu/menu_desplegable.xml
+++ b/app/src/main/res/menu/menu_desplegable.xml
@@ -3,7 +3,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Opcion 1" />
-    <item android:title="Opcion 2" />
-    <item android:title="Opcion 3" />
+    <item android:title="Añadir receta"
+        android:id="@+id/añadirreceta"/>
+    <item android:title="Recetas guardadas"
+        android:id="@+id/recetaguradada"/>
+    <item android:title="Editar perfil"
+        android:id="@+id/editarperfil"/>
 </menu>
