--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="red">#BB374F</color>
     <color name="colorSelected">#88A5C6</color>
     <color name="colorUnselected">#FFFFFF</color>
+    <color name="grey">#D9D9D9</color>
 </resources>
