--- a/app/src/main/res/layout/fragment_anadir_receta1.xml
+++ b/app/src/main/res/layout/fragment_anadir_receta1.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="0dp">
+    android:fillViewport="true">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="0dp">
 
     <View
         android:id="@+id/cabecera"
@@ -134,5 +138,5 @@
         android:layout_below="@id/addStepButton"
         android:layout_marginTop="16dp" />
 
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
