--- a/app/src/main/res/layout/fragment_anadir_receta1.xml
+++ b/app/src/main/res/layout/fragment_anadir_receta1.xml
@@ -57,21 +57,39 @@
         />
 
     <!-- Espacio para la imagen -->
-    <ImageView
-        android:id="@+id/recipeImage"
-        android:layout_width="315dp"
-        android:layout_height="165dp"
-        android:src="@drawable/photo_and_video_1"
-        android:scaleType="center"
-        android:layout_below="@id/recipeNameInput"
-        android:layout_centerInParent="true"
-        android:background="@color/grey" />
+        <ScrollView
+            android:layout_width="315dp"
+            android:layout_height="165dp"
+            android:id="@+id/scrollId"
+            android:fillViewport="true"
+            android:layout_below="@id/recipeNameInput"
+            android:layout_centerInParent="true">
+            <LinearLayout
+                android:id="@+id/layoutImagenes"
+                android:layout_width="315dp"
+                android:layout_height="165dp"
+                android:orientation="vertical"
+                android:layout_below="@id/recipeStepsTitle">
+                <!-- Primer EditText para los pasos -->
+                <ImageButton
+                    android:id="@+id/recipeImage"
+                    android:layout_width="315dp"
+                    android:layout_height="165dp"
+                    android:src="@drawable/photo_and_video_1"
+                    android:scaleType="center"
+                    android:layout_below="@id/recipeNameInput"
+                    android:layout_centerInParent="true"
+                    android:background="@color/grey" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
     <TextView
         android:id="@+id/recipeDescriptionTitle"
         android:layout_width="118dp"
         android:layout_height="24dp"
-        android:layout_below="@id/recipeImage"
+        android:layout_below="@id/scrollId"
         android:layout_centerInParent="true"
         android:text="Descripción"
         android:textAppearance="?android:attr/textAppearanceMedium"
