--- a/app/src/main/res/layout/fragment_anadir_receta_3.xml
+++ b/app/src/main/res/layout/fragment_anadir_receta_3.xml
@@ -42,17 +42,32 @@
                 android:layout_height="20dp"
                 android:src="@drawable/ic_dot_selected"/>
         </LinearLayout>
-
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:padding="20dp"
-            android:textSize="50dp"
-            android:text="Se ha añadido la receta"
+            android:layout_height="96dp"
+            android:textSize="40dp"
+            android:text="¡ Listo !"
             android:textAlignment="center"
+            android:layout_above="@id/listo"
+            android:textColor="@color/black"
+            android:id="@+id/listotext"/>
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="177dp"
+            android:id="@+id/listo"
+            android:layout_marginBottom="20dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:textColor="@color/custom_color_primary"
+            android:background="@drawable/tick"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="96dp"
+            android:textSize="40dp"
+            android:text="Se ha añadido la receta"
+            android:textAlignment="center"
+            android:layout_below="@id/listo"
+            android:textColor="@color/black"
             android:id="@+id/fin"/>
 
         <ImageButton
