Ahora se cargan las recetas de firebase en la pagina principal y al hacerles click recogeremos el nombre del usuario y la receta (que por ahora solo se puede ver en un log)

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -92,6 +92,9 @@
         <action
             android:id="@+id/action_pantallaprincipal_to_pantallaperfil"
             app:destination="@id/pantallaperfil" />
+        <action
+            android:id="@+id/action_pantallaprincipal_to_verRecetas"
+            app:destination="@id/verRecetas" />
     </fragment>
     <fragment android:id="@+id/pantallaperfil"
         android:name="com.example.trabajofinalv2.PantallaPerfil"
@@ -153,4 +156,12 @@
             android:id="@+id/action_pantallaAnadirReceta3_to_pantallaMenuInferior"
             app:destination="@id/pantallaMenuInferior" />
     </fragment>
+    <fragment
+        android:id="@+id/verRecetas"
+        android:name="com.example.trabajofinalv2.VerRecetas"
+        android:label="fragment_ver_recetas"
+        tools:layout="@layout/fragment_ver_recetas">
+    </fragment>
+
+
 </navigation>
