--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="colorSelected">#88A5C6</color>
     <color name="colorUnselected">#FFFFFF</color>
     <color name="grey">#D9D9D9</color>
+    <color name="placeholder_bg">#dddddd</color>
 </resources>
