--- a/app/src/main/res/layout/fragment_verrecetas.xml
+++ b/app/src/main/res/layout/fragment_verrecetas.xml
@@ -1,9 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".verRecetas">
+
+    <Button
+        android:id="@+id/foto"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/cabecera"
+        android:contentDescription=" "
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    
+    <LinearLayout
+        android:id="@+id/linearLayoutUsuario"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toBottomOf="@+id/foto"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imagenUsuario"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/circulopiochef_3"
+            android:contentDescription="Imagen de usuario"
+            android:padding="8dp"
+            />
+
+        <TextView
+            android:id="@+id/nombreUsuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nombre de usuario"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:paddingLeft="16dp"/>
+        
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/imagenes"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="0dp"
+        android:layout_below="@id/linearLayoutUsuario"
+        app:layout_constraintTop_toBottomOf="@id/linearLayoutUsuario">
+
+        <ImageView
+            android:id="@+id/imagenDecorativa"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_launcher_background"
+            android:scaleType="centerCrop"
+             />
+
+        <TextView
+            android:id="@+id/textoSuperpuesto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"
+            android:text="Hora"
+            android:background="@color/grey"
+            android:padding="4dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/botones"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/imagenes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <Button
+            android:id="@+id/botonPreparacion"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Preparación"
+            android:background="@color/white"/>
+
+        <Button
+            android:id="@+id/botonIngredientes"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Ingredientes"
+            android:background="@color/custom_color_primary"/>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/contenedorPreparacion"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@+id/botones"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/textViewPreparacion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:text="Preparacion"
+            android:textColor="@color/custom_color_primary"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            />
+
+
+
+    </FrameLayout>
+
+
+
+    <FrameLayout
+        android:id="@+id/contenedorIngredientes"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@+id/botones"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textViewIngredientes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:text="Ingredientes"
+            android:textColor="@color/custom_color_primary"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            />
+
+
+
+    </FrameLayout>
+
+        />
+
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -12,4 +162,4 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
