--- a/app/src/main/res/layout/fragment_pantalla_perfil.xml
+++ b/app/src/main/res/layout/fragment_pantalla_perfil.xml
@@ -35,13 +35,23 @@
     />
 
 
-    <View
+   <!-- <View
         android:text="Some text"
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="40dp"
         android:background="@color/black"
+        app:layout_constraintTop_toTopOf="@+id/panel"
+        app:layout_constraintStart_toStartOf="@+id/panel"
+        />-->
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="40dp"
+        android:background="@drawable/placeholder_image"
         app:layout_constraintTop_toTopOf="@+id/panel"
         app:layout_constraintStart_toStartOf="@+id/panel"
         />
