--- a/app/src/main/res/layout/fragment_pantalla_perfil.xml
+++ b/app/src/main/res/layout/fragment_pantalla_perfil.xml
@@ -118,7 +118,7 @@
     <TextView
         android:text="Nombre de usuario"
         android:id="@+id/username"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
         android:textColor="#000000"
@@ -129,8 +129,8 @@
 
     <TextView
         android:id="@+id/descp"
-        android:layout_width="222dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textColor="#000000"
         app:layout_constraintLeft_toLeftOf="@+id/username"
         app:layout_constraintTop_toBottomOf="@+id/username" />
