Se puede ir atrás con el boton de atrás en todas las pantallas (menos en la principal)

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -130,9 +130,6 @@
         android:label="fragment_anadir_receta3"
         tools:layout="@layout/fragment_anadir_receta_3" >
         <action
-            android:id="@+id/action_pantallaAnadirReceta3_to_pantallaAnadirReceta2"
-            app:destination="@id/pantallaAnadirReceta2" />
-        <action
             android:id="@+id/action_pantallaAnadirReceta3_to_pantallaMenuInferior"
             app:destination="@id/pantallaMenuInferior" />
     </fragment>
@@ -141,6 +138,9 @@
         android:name="com.example.trabajofinalv2.verRecetas"
         android:label="fragment_ver_recetas"
         tools:layout="@layout/fragment_verrecetas">
+        <action
+            android:id="@+id/action_verRecetas_to_pantallaMenuInferior"
+            app:destination="@id/pantallaMenuInferior" />
     </fragment>
     <fragment
         android:id="@+id/cambiarContraseña"
